<resources>
    <string name="app_name">NASA APOD </string>
    <string name="no_information">No Information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="copyright">Copyright</string>
    <string name="date">Date</string>
    <string name="explanation">Explanation</string>
    <string name="hdurl">copyright</string>
    <string name="media_type">Media Type</string>
    <string name="service_version">Service Version</string>
    <string name="title">Title</string>
    <string name="colon">:</string>
</resources>
