<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            >

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">


                   <androidx.cardview.widget.CardView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_margin="@dimen/margin"
                       app:cardCornerRadius="@dimen/radius">
                   <LinearLayout
                       android:id="@+id/copyright_linear"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="@dimen/layout_margin_top"
                       android:orientation="vertical">



                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/copyright"
                           android:textStyle="bold"
                           android:padding="@dimen/padding"
                           android:textSize="@dimen/toolbar_text_size"
                           android:textColor="@color/colorPrimary">

                       </TextView>
                       <TextView
                           android:id="@+id/copyright"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/copyright"
                           android:padding="@dimen/padding"
                           android:layout_marginStart="20dp"
                           android:layout_marginLeft="20dp"
                           android:textSize="@dimen/toolbar_text_size">

                       </TextView>



                   </LinearLayout>
               </androidx.cardview.widget.CardView>

                   <androidx.cardview.widget.CardView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_margin="@dimen/margin"
                       app:cardCornerRadius="@dimen/radius">
                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="@dimen/layout_margin_top"
                           android:orientation="vertical">



                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/date"
                               android:textStyle="bold"
                               android:padding="@dimen/padding"
                               android:textSize="@dimen/toolbar_text_size"
                               android:textColor="@color/colorPrimary">

                           </TextView>
                           <TextView
                               android:id="@+id/date"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/date"
                               android:padding="@dimen/padding"
                               android:layout_marginStart="20dp"
                               android:layout_marginLeft="20dp"
                               android:textSize="@dimen/toolbar_text_size">

                           </TextView>



                       </LinearLayout>
                   </androidx.cardview.widget.CardView>

                   <androidx.cardview.widget.CardView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_margin="@dimen/margin"
                       app:cardCornerRadius="@dimen/radius">
                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="@dimen/layout_margin_top"

                           android:orientation="vertical">



                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/media_type"
                               android:textStyle="bold"
                               android:padding="@dimen/padding"
                               android:textSize="@dimen/toolbar_text_size"
                               android:textColor="@color/colorPrimary">

                           </TextView>
                           <TextView
                               android:id="@+id/media_type"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/media_type"
                               android:padding="@dimen/padding"
                               android:layout_marginStart="20dp"
                               android:layout_marginLeft="20dp"
                               android:textSize="@dimen/toolbar_text_size">

                           </TextView>



                       </LinearLayout>
                   </androidx.cardview.widget.CardView>



                   <androidx.cardview.widget.CardView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_margin="@dimen/margin"
                       app:cardCornerRadius="@dimen/radius">
                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="@dimen/layout_margin_top"

                           android:orientation="vertical">



                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/service_version"
                               android:textStyle="bold"
                               android:padding="@dimen/padding"
                               android:textSize="@dimen/toolbar_text_size"
                               android:textColor="@color/colorPrimary">

                           </TextView>
                           <TextView
                               android:id="@+id/service_version"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/service_version"
                               android:padding="@dimen/padding"
                               android:layout_marginStart="20dp"
                               android:layout_marginLeft="20dp"
                               android:textSize="@dimen/toolbar_text_size">

                           </TextView>



                       </LinearLayout>
                   </androidx.cardview.widget.CardView>


                   <androidx.cardview.widget.CardView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_margin="@dimen/margin"
                       app:cardCornerRadius="@dimen/radius">
                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="@dimen/layout_margin_top"
                           android:orientation="vertical">



                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/explanation"
                               android:textStyle="bold"
                               android:padding="@dimen/padding"
                               android:textSize="@dimen/toolbar_text_size"
                               android:textColor="@color/colorPrimary">

                           </TextView>
                           <com.example.imagegridapp.customViews.JustifiedTextView
                               android:id="@+id/explanation"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/explanation"
                               android:padding="@dimen/padding"
                               android:layout_marginStart="20dp"
                               android:layout_marginLeft="20dp"
                               android:textSize="@dimen/toolbar_text_size">

                           </com.example.imagegridapp.customViews.JustifiedTextView>



                       </LinearLayout>
                   </androidx.cardview.widget.CardView>

               </LinearLayout>





    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
